# capital-placement

./: .env.example  .env.local  .gitignore  AGENTS.md  CLAUDE.md  README.md  SQLModel_Migration_Plan.md  STORAGE_MIGRATION_GUIDE.md  alembic.ini  install_pgvector.sh  pyproject.toml  pytest.ini  setup_database.sh
app/: __init__.py  main.py
app/api/: __init__.py  converters.py  dependencies.py
app/api/rate_limit/: __init__.py  rate_limit_dependencies.py
app/api/schemas/: __init__.py  analytics_schemas.py  base.py  document_schemas.py  export_schemas.py  facet_schemas.py  job_schemas.py  notification_schemas.py  profile_schemas.py  search_schemas.py  suggestion_schemas.py  upload_schemas.py  webhook_schemas.py
app/api/v1/: __init__.py  ai.py  audit.py  auth.py  profiles.py  search.py  setup.py  tenants.py  upload.py  webhooks.py
app/application/: __init__.py  click_tracking_service.py  facet_application_service.py  profile_export_service.py  profile_service.py  saved_search_service.py  search_history_service.py  search_service.py  suggestion_service.py  upload_service.py
app/application/dependencies/: __init__.py  click_tracking_dependencies.py  profile_dependencies.py  saved_search_dependencies.py  search_dependencies.py  search_history_dependencies.py  upload_dependencies.py
app/application/document/: __init__.py  document_processor.py
app/application/search/: __init__.py  hybrid_search.py  result_reranker.py  search_application_service.py
app/core/: __init__.py  config.py  container.py  dependencies.py  environment.py  interfaces.py  service_factory.py  system_constants.py  transaction_manager.py
app/database/: __init__.py  error_handling.py  initialization.py  sqlmodel_engine.py  sqlmodel_migration.py
app/database/migrations/: 001_initial_schema.sql  002_ai_enhancements.sql  003_align_user_schema.sql  004_add_tenant_display_name.sql  005_complete_tenant_model_schema.sql  006_add_usage_metrics_column.sql  007_add_is_suspended_column.sql  008_migrate_role_to_roles.sql  009_remove_role_column.sql
app/database/repositories/: __init__.py  postgres.py
app/domain/: __init__.py  exceptions.py  interfaces.py  retry.py  task_types.py  value_objects.py
app/domain/entities/: __init__.py  document_processing.py  facet.py  profile.py  saved_search.py  search_click.py  search_history.py  tenant.py  user.py
app/domain/events/: __init__.py  base.py  profile_events.py  tenant_events.py  user_events.py
app/domain/repositories/: __init__.py  profile_repository.py  saved_search_repository.py  search_click_repository.py  search_history_repository.py  tenant_repository.py  user_repository.py
app/domain/services/: __init__.py  matching_service.py  profile_scoring_service.py  webhook_validator.py
app/domain/utils/: __init__.py  file_size_validator.py
app/infrastructure/: __init__.py  task_manager.py
app/infrastructure/adapters/: __init__.py  document_processor_adapter.py  event_publisher_adapter.py  facet_adapter.py  memory_cache_adapter.py  notification_adapter.py  postgres_adapter.py  storage_adapter.py  suggestion_cache_adapter.py  tenant_database_adapter.py
app/infrastructure/ai/: __init__.py  cache_manager.py  embedding_service.py  openai_service.py  prompt_manager.py
app/infrastructure/analytics/: __init__.py  usage_tracker.py
app/infrastructure/audit/: __init__.py  audit_service.py
app/infrastructure/auth/: __init__.py  authorization_service.py
app/infrastructure/bootstrap/: __init__.py  bootstrap_service.py
app/infrastructure/document/: __init__.py  content_extractor.py  embedding_generator.py  pdf_processor.py  quality_analyzer.py  schemas.py
app/infrastructure/factories/: click_tracking_dependency_factory.py  profile_dependency_factory.py  saved_search_dependency_factory.py  search_dependency_factory.py  search_history_dependency_factory.py  upload_dependency_factory.py
app/infrastructure/mappers/: __init__.py  profile_mapper.py
app/infrastructure/providers/: __init__.py  ai_provider.py  analytics_provider.py  audit_provider.py  auth_provider.py  bootstrap_provider.py  cache_provider.py  database_provider.py  document_provider.py  document_store_provider.py  event_provider.py  export_provider.py  facet_provider.py  message_queue_provider.py  notification_provider.py  postgres_provider.py  rate_limit_provider.py  repository_provider.py  resource_provider.py  retry_provider.py  search_provider.py  storage_provider.py  suggestion_provider.py  (+6 more)
app/middleware/: __init__.py  rate_limit_middleware.py  usage_tracking.py
app/models/: __init__.py  analytics.py  audit.py  auth.py  base.py  document.py  document_processing.py  embedding.py  job.py  notification.py  profile.py  retry_models.py  search_models.py  tenant_models.py  upload_models.py  webhook.py
app/services/: bootstrap_service.py
app/utils/: security.py  session_utils.py
migrations/: env.py
migrations/versions/: 19d64ee777c8_add_unique_constraint_on_embeddings_.py  1a047a9c676a_add_search_history_table_with_analytics_.py  1ad2d49e160d_add_document_processing_table.py  1c4c2a91968c_add_saved_searches_table.py  2fd15f8c7ef4_update_embeddings_vector_dimension_from_.py  34c03f3fecb4_make_ip_address_and_user_agent_nullable_.py  50121c073ff9_add_audit_logs_table_for_security_.py  5fea2beeb836_add_facet_query_indexes.py  72d402eb3c32_add_retry_system_tables_for_error_.py  a18e54380e0d_add_webhook_system_tables_with_proper_.py  de509fa3a179_update_retry_and_webhook_models_.py  e01c68db2465_add_search_suggestions_tables_and_.py  e3ee7c7e51f2_create_query_expansions_table.py  e84203120131_expand_profile_embeddings_to_3072.py  f4cfc66834b5_initial_schema_from_sqlmodel_with_.py  fb5da64014df_change_audit_logs_suspicious_field_from_.py
tests/: README.md  conftest.py  test_audit_system.py  test_rate_limiting.py  test_strategy_design.md  test_webhook_reliability.py
tests/architecture/: test_hexagonal_boundaries.py
tests/fixtures/: tenant_fixtures.py
tests/integration/: __init__.py  test_file_validation_integration.py
tests/mocks/: mock_repositories.py  mock_services.py
(+196 files in other folders)
